--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" manifest="cache.appcache">
 <head>
   <meta charset="utf-8">
-  <title>-256</title>
+  <title>-64</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -44,7 +44,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">-256</h1>
+      <h1 class="title">-64</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>-256 tile!</strong></p>
+      <p class="game-intro">Join the numbers and get to the <strong>-64 tile!</strong></p>
       <a class="restart-button">New Game</a>
     </div>
 
@@ -119,7 +119,7 @@
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> The game on <a href="http://gold5472.github.io/-256/">this site</a> is the original version of -256.
+    <strong class="important">Note:</strong> This is the original version of -64.
     </p>
     <hr>
     <p>
