--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <meta property="og:title" content="2048"/>
   <meta property="og:site_name" content="2048"/>
   <meta property="og:description" content="Join the numbers and get to the 2048 tile! Careful: this game is extremely addictive!"/>
-  <meta property="og:image" content="http://gabrielecirulli.github.io/2048/meta/og_image.png"/>
 
   
 </head>
@@ -91,7 +90,7 @@
     </p>
     <hr>
     <p>
-    Created by <a href="http://gold5472.github.io/243" target="_blank">gold5472.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Created by <a href="http://github.com/gold5472" target="_blank">gold5472.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
     
 
